@@ -14,13 +14,6 @@
 <TR><TD ALIGN=LEFT>i <TD ALIGN=LEFT>aip f <TD ALIGN=LEFT>advance illumination pointer forward
 <TR><TD ALIGN=LEFT>I <TD ALIGN=LEFT>aip b <TD ALIGN=LEFT>advance illumination pointer backward
 <TR><TD ALIGN=LEFT>p <TD ALIGN=LEFT>M 1 0 0 <TD ALIGN=LEFT>simulate mouse click
-<TR><TD ALIGN=LEFT>0 <TD ALIGN=LEFT>knob zero <TD ALIGN=LEFT>zero knobs
-<TR><TD ALIGN=LEFT>x <TD ALIGN=LEFT>knob -i x 0.3 <TD ALIGN=LEFT>increase rate x-rotate
-<TR><TD ALIGN=LEFT>y <TD ALIGN=LEFT>knob -i y 0.3 <TD ALIGN=LEFT>increase rate y-rotate
-<TR><TD ALIGN=LEFT>z <TD ALIGN=LEFT>knob -i z 0.3 <TD ALIGN=LEFT>increase rate z-rotate
-<TR><TD ALIGN=LEFT>X <TD ALIGN=LEFT>knob -i x -0.3 <TD ALIGN=LEFT>decrease rate x-rotate
-<TR><TD ALIGN=LEFT>Y <TD ALIGN=LEFT>knob -i y -0.3 <TD ALIGN=LEFT>decrease rate y-rotate
-<TR><TD ALIGN=LEFT>X <TD ALIGN=LEFT>knob -i z -0.3 <TD ALIGN=LEFT>decrease rate z-rotate
 <TR><TD ALIGN=LEFT>3 <TD ALIGN=LEFT>press 35,25 <TD ALIGN=LEFT>set view azimuth/elevation to 35/25
 <TR><TD ALIGN=LEFT>4 <TD ALIGN=LEFT>press 45,45 <TD ALIGN=LEFT>set view azimuth/elevation to 45/45
 <TR><TD ALIGN=LEFT>f <TD ALIGN=LEFT>press front <TD ALIGN=LEFT>set view azimuth/elevation to 0/0
@@ -58,6 +51,7 @@
 <TR><TD ALIGN=LEFT>&lt;Control-n&gt; <TD ALIGN=LEFT>set view 1 <TD ALIGN=LEFT>advance to next view
 <TR><TD ALIGN=LEFT>&lt;Control-p&gt; <TD ALIGN=LEFT>set view 0 <TD ALIGN=LEFT>advance to previous view
 <TR><TD ALIGN=LEFT>&lt;Control-v&gt; <TD ALIGN=LEFT>set view ! <TD ALIGN=LEFT>toggle between current view and previous view
+<TR><TD ALIGN=LEFT>&lt;Escape&gt; <TD ALIGN=LEFT>knob zero; press reject<TD ALIGN=LEFT>stop interactive rotation and reject any edits
 </TABLE>
 </BODY>
 </HTML>
